# brettgws

./: .gitignore  LICENSE  README.md  pyproject.toml
src/brettgws/: __init__.py  access.py  calendar.py  resources.py
src/brettgws/sheets/: __init__.py  a1.py  ops.py  requests.py  resources.py  sheet.py  spreadsheet.py
tests/: test_a1.py
